# openvslam

./: .gitignore  CMakeLists.txt
cmake/: FindSuiteSparse.cmake
ros/: debug.txt  frame_trajectory.txt  keyframe_trajectory.txt
ros/.catkin_tools/profiles/default/: devel_collisions.txt
ros/src/openvslam/: CMakeLists.txt  package.xml
ros/src/openvslam/launch/: openvslam_IMU_mono.launch  openvslam_IMU_stereo.launch  openvslam_rgbd.launch  openvslam_stereo.launch
ros/src/openvslam/scripts/: yaml_to_camera_info_left.py  yaml_to_camera_info_right.py
ros/src/openvslam/src/: CMakeLists.txt  IMU_slam.cc  mono_slam.cc  mono_slam_OK.cc  rgbd_slam.cc
ros/src/openvslam/src/MsgSync/: MsgSynchronizer.cpp  MsgSynchronizer.h
src/openvslam/: CMakeLists.txt  config.cc  global_optimization_module.cc  global_optimization_module.h  mapping_module.cc  mapping_module.h  system.cc  system.h  tracking_module.cc  tracking_module.h
src/openvslam/IMU/: IMUPreintegrator.cpp  IMUPreintegrator.h  NavState.cpp  NavState.h  configparam.cpp  configparam.h  g2otypes.cpp  g2otypes.h  imudata.cpp  imudata.h
src/openvslam/data/: frame.cc  frame.h  keyframe.cc  keyframe.h  landmark.cc  landmark.h  map_database.cc  map_database.h
src/openvslam/module/: initializer.cc  initializer.h  keyframe_inserter.cc  keyframe_inserter.h  loop_bundle_adjuster.cc  loop_bundle_adjuster.h
src/openvslam/optimize/: global_bundle_adjuster.cc  graph_optimizer.cc  graph_optimizer.h  local_bundle_adjuster.cc  local_bundle_adjuster.h
src/openvslam/optimize/g2o/: CMakeLists.txt
src/openvslam/optimize/g2o/core/: CMakeLists.txt
src/openvslam/optimize/g2o/se3/: shot_vertex_container.cc
src/openvslam/optimize/g2o/solvers/: CMakeLists.txt  linear_solver_cholmod.h  linear_solver_eigen.h
src/openvslam/optimize/g2o/stuff/: CMakeLists.txt
src/openvslam/optimize/g2o/types/: CMakeLists.txt
src/openvslam/util/: converter.cc  converter.h
